<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_launcher_round"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/hello_world" />
    <TextView
        android:id="@+id/txt_hello1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/helloworld" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_en" />

        <Button
            android:id="@+id/btn_ru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_ru" />

        <Button
            android:id="@+id/btn_gu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Gujarati" />

        <Button
            android:id="@+id/btn_hi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_hi" />
    </LinearLayout>

</LinearLayout>